Add the possibility to sign transaction in PegoutTransactionBuilder